k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # tell k8s to create ingress controller based on ingress-nginx project
    kubernetes.io/ingress.class: nginx
    # Configure how the copy of nginx behave
    # chop the prefix of api before routing
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # routing rules
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
